Added page header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LCD Custom Character Generator</title>
-	<script type="text/css">
-	</script>
+	
+	<style type="text/css">
+	body {
+    padding: 0px;
+    margin: 0px
+	}
+	
+	.header {
+		vetical-align: top;
+		background-color: #fafafa;
+		width: 100%;
+		padding-bottom: 7px;
+		padding-top: 7px;
+		
+		border-bottom: solid;
+		border-color: #d9d9d9;
+		border-width: thin;
+	}
+		
+	.header_title {
+		font-size: 20px;
+		text-align: center;
+		font-family: "Arial", Calibri, Dejavu Sans;
+		user-select: none;
+	}
+	
+	</style>
+	
+
 	
 </head>
 
-<body>
+<body bgcolor="white">
+	<div class="header">
+		<h1 class="header_title">LCD Custom Character Generator</h1>
+	</div>
+	<br>
+	
+
 	<script type="text/javascript">
 	</script>
 </body>
