Added code updated when loading

--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
 		lcdpixel.className = "lcd_pixel_selected";
 		sel_lcd_id = lcdID;
 		load_lcd_to_editor(lcdID);
+		update_code();
 	}
 	
 	function unselect_all(){
