Added Automatic Copy option

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 	<div class="page_content">
 	
 		<div class="code_box">
-		<div class="box_title">Code</div>
-			<textarea id="code" class="code_text" readonly>
-			</textarea>
+			<div class="box_title">Code</div>
+			<textarea id="code" class="code_text" readonly></textarea>
 		</div>
 		
 		<div class="option_box">
 		<div class="box_title">Options</div>
+			<form>
+				Automatic Copy<input id="autocopy" class="checkbox" type="checkbox">
+			</form>
 		</div>
 		
 		<div class="pixel_editor">
