Added About and improved footer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 				Automatic Copy<input id="autocopy" class="checkbox" type="checkbox">
 			</form>
 		</div>
+    
+    <div class="about_box">
+    <div class="box_title">About</div>
+				Click pixels to generate a custom character for your Arduino microcontroller. 
+        Use the LCD 16x2 preview to visualize your custom characters. Swap
+        between the preview pixels by clicking on them.
+        <br> <br>
+        View a code example by clicking 
+        <a href= https://github.com/alestiago/LCD-Custom-Character-Generetor/tree/master/examples target="_blank">here</a>.
+		</div>
 		
 		<div class="pixel_editor">
 				<form class="editor_options">
@@ -413,6 +423,9 @@
 	
 	<div class="footer">
 		<u><a href="https://github.com/alestiago/LCD-Custom-Character-Generetor" target="_blank">GitHub</a></u>
+    <u><a href="" target="_blank">Donate</a></u>
+    <u><a href="" target="_blank">Contribute</a></u> <br>
+    <label class="license_text">&copy; 2020 Name goes here</label>
 	</div>
 	
 	<script src="functions.js"></script> 
