Added include define option

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div class="option_box">
 		<div class="box_title">Options</div>
 			<form>
-				Automatic Copy<input id="autocopy" class="checkbox" type="checkbox">
+				Automatic Copy<input id="autocopy" class="checkbox" type="checkbox"> <br>
+        Include #define<input id="includeDefine" class="checkbox" type="checkbox" onclick="updateCode();">
 			</form>
 		</div>
     
