--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body onload="updateCode();">
 	<div class="header">
 		<h1 class="header_title">LCD Custom Character Editor</h1>
+    <h3 class="header_subtitle">Designing characters made easier</h3>
 	</div>
 	
 	<div class="page_content">
@@ -21,10 +22,10 @@
 		</div>
 		
 		<div class="option_box">
-		<div class="box_title">Options</div>
+		<div class="box_title">Code Options</div>
 			<form>
-				Automatic Copy<input id="autocopy" class="checkbox" type="checkbox"> <br>
-        Include #define<input id="includeDefine" class="checkbox" type="checkbox" onclick="updateCode();">
+				Automatic copy:<input id="autocopy" class="checkbox" type="checkbox" onclick="updateCode();"> <br>
+        Include #define:<input id="includeDefine" class="checkbox" type="checkbox" onclick="updateCode();">
 			</form>
 		</div>
     
