Added mirror option

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 					<input type="text-area" id="charname" class="char_name_input" value="charName" oninput="updateCode();" onkeydown="return checkEnter(event);"/> <br>
 					<input type="button" class="button" value="Clear" onclick="clear_pixels();"/>
 					<input type="button" class="button" value="Invert" onclick="invertPixels();"/>
+          <input type="button" class="button" value="Mirror" onclick="mirrorPixels();"/>
 				</form>
 				
 			<div class="pixel_box">
