--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>LCD Custom Character Editor</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
