Added up, down, left, right shifts

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <img id="mirror_icon" src="images/mirror_icon.png" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
     <img id="copy_icon" src="images/copy_icon.png" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
     <img id="paste_icon" src="images/paste_icon.png" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shiftup_icon" src="images/shiftup_icon.png" onclick="shiftUp();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shiftleft_icon" src="images/shiftleft_icon.png" onclick="shiftLeft();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shiftright_icon" src="images/shiftright_icon.png" onclick="shiftRight();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shiftdown_icon" src="images/shiftdown_icon.png" onclick="shiftDown();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
     </div>
     
 		<div id="pixel-editor">
