Renamed image name to follow convention

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     </div>
     
     <div id="editor-options-box">
-    <img id="clear_icon"  src="images/clear_icon.png" onclick="clear_pixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="invert_icon" src="images/invert_icon.png" onclick="invertPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="mirror_icon" src="images/mirror_icon.png" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="copy_icon" src="images/copy_icon.png" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="paste_icon" src="images/paste_icon.png" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="shiftup_icon" src="images/shiftup_icon.png" onclick="shiftUp();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="shiftleft_icon" src="images/shiftleft_icon.png" onclick="shiftLeft();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="shiftright_icon" src="images/shiftright_icon.png" onclick="shiftRight();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-    <img id="shiftdown_icon" src="images/shiftdown_icon.png" onclick="shiftDown();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="clear-icon"  src="images/clear-icon.png" onclick="clear_pixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="invert-icon" src="images/invert-icon.png" onclick="invertPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="mirror-icon" src="images/mirror-icon.png" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="copy-icon" src="images/copy-icon.png" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="paste-icon" src="images/paste-icon.png" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shift-up-icon" src="images/shift-up-icon.png" onclick="shiftUp();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shift-left-icon" src="images/shift-left-icon.png" onclick="shiftLeft();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shift-right-icon" src="images/shift-right-icon.png" onclick="shiftRight();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+    <img id="shift-down-icon" src="images/shift-down-icon.png" onclick="shiftDown();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
     </div>
     
 		<div id="pixel-editor">
