Added code to Hexadecimal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div class="box-title">Code Options</div>
         <form>
           Automatic copy:<input id="autocopy" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();"> <br>
-          Include #define:<input id="includeDefine" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">
+          Include #define:<input id="include-define" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">
+          Hex datatype:<input id="hex-data-type" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">
         </form>
     </div>
     
