Updated to header and footer tags

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body onload="updateCode();">
-  <div id="header-bar">
+  <header>
     <h1 id="header-title">LCD Custom Character Editor</h1>
     <h3 id="header-subtitle">Designing characters made easier</h3>
-  </div>
+  </header>
 
   <div id="page-content">
     
@@ -447,7 +447,7 @@
     </div>		
   </div>
 	
-  <div id="footer-bar">
+  <footer>
       <a href="https://github.com/alestiago/LCD-Custom-Character-Generetor" target="_blank">GitHub</a>
       <form id="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
         <input type="hidden" name="cmd" value="_s-xclick" />
@@ -456,7 +456,6 @@
       </form>
       <a href="" target="_blank">Contribute</a>
       <label id="copyright-text">&copy; 2020 Name goes here</label>
-  </div>
-  
+  </footer>
   <script src="functions.js"></script> 
 </body>
