Updated images directory

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     </div>
     
     <div id="editor-options-box">
-      <img id="clear-icon"  src="images/clear-icon.png" title="Clear"onclick="clear_pixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="invert-icon" src="images/invert-icon.png" title="Invert" onclick="invertPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="mirror-icon" src="images/mirror-icon.png" title="Mirror" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="copy-icon" src="images/copy-icon.png" title="Copy" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="paste-icon" src="images/paste-icon.png" title="Paste" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="shift-up-icon" src="images/shift-up-icon.png" title="Shift upwards" onclick="shiftUp();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="shift-left-icon" src="images/shift-left-icon.png" title="Shift leftwards" onclick="shiftLeft();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="shift-right-icon" src="images/shift-right-icon.png" title="Shift rightwards" onclick="shiftRight();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
-      <img id="shift-down-icon" src="images/shift-down-icon.png" title="Shift downwards" onclick="shiftDown();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="clear-icon"  src="images/editor-icons/clear-icon.png" title="Clear"onclick="clear_pixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="invert-icon" src="images/editor-icons/invert-icon.png" title="Invert" onclick="invertPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="mirror-icon" src="images/editor-icons/mirror-icon.png" title="Mirror" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="copy-icon" src="images/editor-icons/copy-icon.png" title="Copy" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="paste-icon" src="images/editor-icons/paste-icon.png" title="Paste" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="shift-up-icon" src="images/editor-icons/shift-up-icon.png" title="Shift upwards" onclick="shiftUp();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="shift-left-icon" src="images/editor-icons/shift-left-icon.png" title="Shift leftwards" onclick="shiftLeft();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="shift-right-icon" src="images/editor-icons/shift-right-icon.png" title="Shift rightwards" onclick="shiftRight();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="shift-down-icon" src="images/editor-icons/shift-down-icon.png" title="Shift downwards" onclick="shiftDown();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
     </div>
     
     <div id="pixel-editor">
@@ -455,7 +455,7 @@
         <input id="donate-form__text" type="submit" value="Get me a Pizza"/>
       </form>
       <a href="" target="_blank">Contribute</a>
-      <label id="copyright-text">&copy; 2020 Name goes here</label>
+      <label id="copyright-text">Open Source Web Tool - &copy; 2020 alestiago </label>
   </footer>
   <script src="functions.js"></script> 
 </body>
