--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>LCD Custom Character Editor</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="updateCode();">
@@ -457,5 +457,5 @@
       <a href="" target="_blank">Contribute</a>
       <label id="copyright-text">Open Source Web Tool - &copy; 2020 alestiago </label>
   </footer>
-  <script src="functions.js"></script> 
+  <script src="scripts/functions.js"></script> 
 </body>
