Updated footer copyright text

--- a/index.html
+++ b/index.html
@@ -455,7 +455,9 @@
         <input id="donate-form__text" type="submit" value="Get me a Pizza"/>
       </form>
       <a href="" target="_blank">Contribute</a>
-      <label id="copyright-text">Open Source Web Tool - &copy; 2020 alestiago </label>
+      <label id="copyright-text">&copy; Open Source Web Tool by 
+        <a id="copyright-text__link" href="https://github.com/alestiago" target="blank">alestiago</a>
+      </label>
   </footer>
   <script src="scripts/functions.js"></script> 
 </body>
