Added favicon, meta description and modified about

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
   <title>LCD Custom Character Editor</title>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <link href="styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -35,9 +37,8 @@
         Click pixels to generate a custom character for your Arduino microcontroller. 
         Use the LCD 16x2 preview to visualize your custom characters. Swap
         between the preview pixels by clicking on them.
-        <br> <br>
         View a code example by clicking 
-        <a href= https://github.com/alestiago/LCD-Custom-Character-Generetor/tree/master/examples target="_blank">here</a>.
+        <a id="about-box__link" href= https://github.com/alestiago/LCD-Custom-Character-Generetor/tree/master/examples target="_blank">here</a>.
     </div>
     
     <div id="share-box">
