--- a/index.html
+++ b/index.html
@@ -449,13 +449,13 @@
   </div>
 	
   <footer>
-      <a href="https://github.com/alestiago/LCD-Custom-Character-Generetor" target="_blank">GitHub</a>
+      <a href="https://github.com/alestiago/chareditor" target="_blank">GitHub</a>
       <form id="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
         <input type="hidden" name="cmd" value="_s-xclick" />
-        <input type="hidden" name="hosted_button_id" value="YU78RUK3CND28" />
-        <input id="donate-form__text" type="submit" value="Get me a Pizza"/>
+        <input type="hidden" name="hosted_button_id" value="" />
+        <input id="donate-form__text" type="submit" value="Support this"/>
       </form>
-      <a href="" target="_blank">Contribute</a>
+      <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a>
       <label id="copyright-text">&copy; Open Source Web Tool by 
         <a id="copyright-text__link" href="https://github.com/alestiago" target="blank">alestiago</a>
       </label>
