Improved about box content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
         Use the LCD 16x2 preview to visualize your custom characters. Swap
         between the preview pixels by clicking on them.
         View a code example by clicking 
-        <a id="about-box__link" href= https://github.com/alestiago/LCD-Custom-Character-Generetor/tree/master/examples target="_blank">here</a>.
+        <a id="about-box__link" href="https://github.com/alestiago/chareditor/tree/master/examples" target="_blank">here</a>.
+        <p>
+        If you wish you may  
+        <a id="about-box__link" href="https://github.com/alestiago/chareditor" target="_blank">star the github repository</a>, 
+        <a id="about-box__link" href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">contribute</a>  
+        with the project or even
+        <form id="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+          <input type="hidden" name="cmd" value="_s-xclick" />
+          <input type="hidden" name="hosted_button_id" value="" />
+          <input id="donate-form__link" type="submit" value="support it!"/>
+        </form>
     </div>
     
     <div id="editor-options-box">
