--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         with the project or even
         <form id="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
           <input type="hidden" name="cmd" value="_s-xclick" />
-          <input type="hidden" name="hosted_button_id" value="" />
+          <input type="hidden" name="hosted_button_id" value="KAEHS42K3TPDA" />
           <input id="donate-form__link" type="submit" value="support it!"/>
         </form>
     </div>
@@ -458,7 +458,7 @@
       <a href="https://github.com/alestiago/chareditor" target="_blank">GitHub</a>
       <form id="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
         <input type="hidden" name="cmd" value="_s-xclick" />
-        <input type="hidden" name="hosted_button_id" value="" />
+        <input type="hidden" name="hosted_button_id" value="KAEHS42K3TPDA" />
         <input id="donate-form__text" type="submit" value="Support this"/>
       </form>
       <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a>
