--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div id="code-option-box">
       <div class="box-title">Code Options</div>
         <form>
-          Automatic copy:<input id="autocopy" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();"> <br>
-          Include #define:<input id="include-define" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">
-          Hex datatype:<input id="hex-data-type" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">
+          <input id="autocopy" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Automatic copy <br>
+          <input id="include-define" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Include #define <br>
+          <input id="hex-data-type" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Hex datatype
         </form>
     </div>
     
