Made clear pixels function to camelCase

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     
     <div id="editor-options-box">
-      <img id="clear-icon"  src="images/editor-icons/clear-icon.png" title="Clear"onclick="clear_pixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
+      <img id="clear-icon"  src="images/editor-icons/clear-icon.png" title="Clear"onclick="clearPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
       <img id="invert-icon" src="images/editor-icons/invert-icon.png" title="Invert" onclick="invertPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
       <img id="mirror-icon" src="images/editor-icons/mirror-icon.png" title="Mirror" onclick="mirrorPixels();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
       <img id="copy-icon" src="images/editor-icons/copy-icon.png" title="Copy" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this.id);" onmouseout="iconUnHovered(this.id);">
