Created functionality to save progress in the browser.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <img id="shift-left-icon" src="images/editor-icons/shift-left-icon.png" title="Shift leftwards" onclick="shiftLeft();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="shift-right-icon" src="images/editor-icons/shift-right-icon.png" title="Shift rightwards" onclick="shiftRight();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="shift-down-icon" src="images/editor-icons/shift-down-icon.png" title="Shift downwards" onclick="shiftDown();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
+      <img id="save-icon" src="images/editor-icons/save-icon__TEMP.png" title="Save" onclick="saveProgress();" height="40px" width="40px">
     </div>
     
     <div id="pixel-editor">
