--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <body>
   <div id="page-logo">
-    <img class="center" src="images/logo.png" title="Chareditor.com">
+    <a href="https://chareditor.com"><img class="center" src="images/logo.png" title="Chareditor.com"></a>
   </div>
 </body>
 
