Added OpenSans font

--- a/home.html
+++ b/home.html
@@ -26,11 +26,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   <title>Chareditor.com</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <link href="styles/home-page__style.css" rel="stylesheet" type="text/css" />
+  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
   <div id="page-logo">
     <a href="https://chareditor.com"><img class="center" src="images/logo.png" title="Chareditor.com"></a>
+  </div>
+
+  <div id="page-options">
+    Home
   </div>
 </body>
 
