Added page body and changed background

--- a/home.html
+++ b/home.html
@@ -23,12 +23,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
-  <title>Chareditor.com</title>
+  <title>Chareditor</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <link href="styles/home-page__style.css" rel="stylesheet" type="text/css" />
   
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:600&display=swap" rel="stylesheet"> 
+
 </head>
 
 <body>
@@ -39,6 +40,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   <div id="page-options">
     Home
   </div>
+  
+  <div id="page-description">
+    <div id="page-description__title">Free online character editor</div> <br>
+    <div id="page-description__subtitle">
+      Easily edit, filter and visualize your characters for your LCD display with<br>
+      self generating code. Unlimeted use and no extensions needed.
+    </div>
+    <a href="index.html"><input id="page-description__button" type="button" value="Make your character now"></a>
+  </div>
+
 </body>
 
 </html>
