Added footer text

--- a/home.html
+++ b/home.html
@@ -49,6 +49,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </div>
     <a href="index.html"><input id="page-description__button" type="button" value="Make your character now"></a>
   </div>
+  
+  <footer>
+    <a id="copyright-text" href="https://github.com/alestiago" target="blank">&copy; Open Source Web Tool by alestiago</a>
+    </div>
+  </footer>
 
 </body>
 
