Small fixes and added header

--- a/home.html
+++ b/home.html
@@ -17,14 +17,15 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 -->
 
-
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
-  <title>Chareditor</title>
+  
+  <title>Character Editor</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+  
+  <!-- CSS imports -->
   <link href="styles/home-page__style.css" rel="stylesheet" type="text/css" />
   
   <!-- Fonts -->
@@ -33,28 +34,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 </head>
 
 <body>
-  <div id="page-logo">
-    <a href="https://chareditor.com"><img class="center" src="images/logo.png" title="Chareditor.com"></a>
-  </div>
+  <header>
+    <div id="page-logo">
+      <a href="https://chareditor.com"><img class="center" src="images/logo.png"></a>
+    </div>
 
-  <div id="page-options">
-    Home
-  </div>
-  
+    <div id="page-options">Home Contribute About Creations</div> 
+  </header>
+
   <div id="page-description">
     <div id="page-description__title">Free online character editor</div> <br>
     <div id="page-description__subtitle">
-      Easily edit, filter and visualize your characters for your LCD display with<br>
-      self generating code. Unlimeted use and no extensions needed.
+      Easily edit, filter and visualize your characters for your LCD display. Includes<br>
+      self generating code, unlimeted use and no extensions needed.
     </div>
     <a href="index.html"><input id="page-description__button" type="button" value="Make your character now"></a>
   </div>
   
   <footer>
     <a id="copyright-text" href="https://github.com/alestiago" target="blank">&copy; Open Source Web Tool by alestiago</a>
-    </div>
   </footer>
-
 </body>
-
 </html>
